Parser2/Grammatica.txt
⟨prog⟩ ::= ⟨statlist⟩ EOF

⟨statlist⟩ ::= ⟨stat⟩ ⟨statlistp⟩

⟨statlistp⟩ ::= ; ⟨stat⟩ ⟨statlistp⟩ | ε

⟨stat⟩ ::= assign ⟨expr ⟩ to ⟨idlist⟩
| print [ ⟨exprlist⟩ ]
| read [ ⟨idlist⟩ ]
| while ( ⟨bexpr ⟩ ) ⟨stat⟩
| conditional [ ⟨optlist⟩ ] <statp>
| { ⟨statlist⟩ }

<statp> ::= end | else <stat> end

⟨idlist⟩ ::= ID ⟨idlistp⟩

⟨idlistp⟩ ::= , ID ⟨idlistp⟩ | ε

⟨optlist⟩ ::= ⟨optitem⟩ ⟨optlistp⟩

⟨optlistp⟩ ::= ⟨optitem⟩ ⟨optlistp⟩ | ε

⟨optitem⟩ ::= option ( ⟨bexpr ⟩ ) do ⟨stat⟩   //!!!

⟨bexpr ⟩ ::= RELOP ⟨expr ⟩ ⟨expr ⟩

⟨expr ⟩ ::= + ( ⟨exprlist⟩ ) | - ⟨expr ⟩ ⟨expr ⟩
| * ( ⟨exprlist⟩ ) | / ⟨expr ⟩ ⟨expr ⟩
| NUM | ID

⟨exprlist⟩ ::= ⟨expr ⟩ ⟨exprlistp⟩

⟨exprlistp⟩ ::= , ⟨expr ⟩ ⟨exprlistp⟩ | ε

NULL(statlistp)
NULL(idlistp)
NULL(optlistp)
NULL(exprlistp)

FIRST(prog)-> {assign,print,read,while,conditional,{,$}
FIRST(statlist)-> {assign,print,read,while,conditional,{ }
FIRST(statlistp)-> {;,$}
FIRST(stat)-> {assign,print,read,while,conditional,{ }
FIRST(idlist)-> {ID}
FIRST(idlistp)-> {,}
FIRST(optlist)->{option}
FIRST(optitem)->{option}
FIRST(bexpr)-> {(RELOP) ==, <>, <=, >=, <, >}
FIRST(expr)->{+,-,*,/,NUM,ID}
FIRST(exprlist)->{+,-,*,/,NUM,ID}
FIRST(exprlistp)->{ , , $}








